<resources>
    <string name="app_name">MinhaPesquisa_TrelloCloneApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeTitle">Organize sua iniciação científica em um único lugar com minha Pesquisa!</string>
    <string name="descriptionText">Registre seus avanços com precisão.\n  Acompanhe e compartilhe prazos, anotações  e tarefas com seus colegas e orientadores.</string>
    <string name="entrar">ENTRAR</string>
    <string name="textocadastro">Não tem uma conta?</string>
    <string name="cadastrar">Cadastre-se aqui</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="conta">Entre em sua conta</string>
    <string name="cliqueaqui">Clique aqui</string>
    <string name="esqueceu">Esqueceu sua senha?</string>
    <string name="cadastro">Cadastro</string>
    <string name="textinhocadastro">Preencha seu nome, email e senha.\nSenhas devem ter 6 caracteres no mínimo .</string>
    <string name="confirme">confirme a senha</string>
    <string name="criarConta">CRIAR CONTA</string>
    <string name="please_wait">Please wait...</string>
    <string name="menu">menu options\n</string>
    <string name="tarefas">Tarefas</string>
    <string name="avisos">Avisos</string>
    <string name="grupos_teste">Grupos Teste</string>
    <string name="amostras">Amostras</string>
    <string name="novoprojeto">Novo Projeto</string>
    <string name="selecionardatas">Selecionar datas</string>
    <string name="adicionarmembros">Adicionar membros</string>
    <string name="selecionarCapa">Selecionar capa</string>
    <string name="criarprojeto">Criar projeto</string>
    <string name="adicione_membros">Adicione Membros</string>
    <string name="ou_nselecione_da_sua_galeria">ou\nSelecione da sua galeria</string>
    <string name="escolha_um_fundo">Escolha um fundo</string>
    <string name="x">x</string>
    <string name="novo_aviso">Novo Aviso</string>
    <string name="criar_aviso">Criar aviso</string>
    <string name="autor">autor</string>
    <string name="aviso">aviso</string>
    <string name="criar_tarefa">Criar tarefa</string>
    <string name="tarefa">Tarefa</string>
    <string name="respons_veis">Responsáveis</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="salvar_amostra">Salvar amostra</string>
    <string name="selecionar_prazo">Selecionar prazo</string>
    <string name="sair">Sair</string>
    <string name="decoration">decoration</string>
    <string name="tasks_image">Tasks image</string>
</resources>