<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".projectDetailsHome.presentation.FragmentNewTask">

    <data>
        <variable
            name="newProjectDetailsViewModel"
            type="com.anaandreis.minhapesquisa_trellocloneapp.projectDetailsHome.domain.ProjectDetailsViewModel"/>
        <variable
            name="fragmentNewTask"
            type="com.anaandreis.minhapesquisa_trellocloneapp.projectDetailsHome.presentation.FragmentNewTask"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/task_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:behavior_fitToContents="true"
            app:behavior_peekHeight="550dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <!-- Bottom sheet contents. -->



            <TextView
                android:id="@+id/criarProjetoTitle"
                style="@style/TitleRobotoBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/nova_tarefa"
                android:textColor="@color/mainRed" />


            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/tarefa"
                app:boxBackgroundColor="@color/editTextGray"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/preencherTarefa_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    android:maxLines="6"
                    android:textColorHint="@color/grey" />

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:hint="@string/respons_veis"
                    android:paddingTop="10dp"
                    app:boxBackgroundColor="@color/editTextGray"
                    app:boxStrokeColor="@color/grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/responsavelTarefa_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/selecionarPrazoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/mainRed"
                app:strokeColor="@color/mainRed"
                android:text="@string/selecionar_prazo" />


            <Button
                android:id="@+id/criarTarefaButton"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/criar_tarefa"
                android:textColor="@color/white"
                app:backgroundTint="@color/mainRed" />


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>