<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleConstraint"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.48" />


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="256dp"
                android:background="@drawable/roundredball"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.351" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="244dp"
                android:layout_marginBottom="632dp"
                android:background="@drawable/roundredball"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/Icon3D"
                android:layout_width="408dp"
                android:layout_height="416dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/iconinicial"
                app:layout_constraintBottom_toTopOf="@+id/tileText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.01999998" />

            <TextView
                android:id="@+id/tileText"
                style="@style/TitleRobotoBold"
                android:layout_width="379dp"
                android:layout_height="76dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/homeTitle"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/descriptionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Icon3D" />


            <TextView
                android:id="@+id/descriptionText"
                style="@style/descricoes"
                android:text="@string/descriptionText"
                app:layout_constraintBottom_toTopOf="@+id/entrarButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tileText" />

            <Button
                android:id="@+id/entrarButton"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="96dp"
                android:text="@string/entrar"
                app:backgroundTint="@color/mainRed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/cadastrarText"
                style="@style/cinzaembaixo"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"

                android:text="@string/textocadastro"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/entrarButton" />

            <TextView
                android:id="@+id/cadastrarButton"
                style="@style/botaotextovermelho"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:text="@string/cadastrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@+id/entrarButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </layout>